--- a/deployments/nginx-depl.yaml
+++ b/deployments/nginx-depl.yaml
@@ -1,13 +1,11 @@
-# Create replica sets
-# apply this file
-# get list of rs
-# kubectl get rs
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: nginx-replicaset
+  name: nginx-deployment
+  labels:
+    app: nginx
 spec:
-  replicas: 3
+  replicas: 5
   selector:
     matchLabels:
       app: nginx
@@ -18,6 +16,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:1.27.0
+          image: nginx:1.27.0-alpine
           ports:
             - containerPort: 80
